# msfenicsx

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RULES.md  environment.yml  pyproject.toml
core/: __init__.py
docs/: thermal_model_course_notes.md
evaluation/: __init__.py  artifacts.py  cli.py  engine.py  io.py  metrics.py  models.py  multicase_engine.py  operating_cases.py  validation.py
examples/: 00_import_check.py  01_steady_heat_rectangle.py  02_multicomponent_steady_heat.py  03_optimize_multicomponent_case.py  04_build_history_dashboard.py  05_build_demo_summary.py  06_build_demo_figures.py  07_build_demo_beamer_inputs.py  08_prepare_demo_dataset.py
llm/: __init__.py
notes/: 01_install_and_first_heat_problem.md  02_multicomponent_heat_visualization.md  03_llm_optimization_workflow.md  04_si_units_case.md  05_demo_script.md  06_current_single_case_implementation_summary.md  07_single_case_workflow_summary.md  08_llm_consistency_4group_report.md  09_llm_consistency_fullwindow_4group_report.md  10_llm_consistency_10group_15round_report.md
optimizers/: __init__.py  algorithm_config.py  algorithm_identity.py  artifacts.py  cheap_constraints.py  clean_initialization.py  cli.py  codec.py  compare_runs.py  comparison_artifacts.py  comparison_summary.py  experiment_index.py  experiment_layout.py  experiment_runner.py  experiment_summary.py  generation_callback.py  io.py  legality.py  llm_decision_summary.py  llm_ranker_diagnostics.py  llm_summary.py  mode_summary.py  models.py  parallel_evaluator.py  problem.py  pymoo_driver.py  render_assets.py  repair.py  run_layout.py  run_manifest.py  run_suite.py  run_telemetry.py  suite_parallel.py  validation.py
prompts/: plan_changes_system.md
radiation_gen/: README.md  README.mdZone.Identifier
scripts/: smoke_render_assets.sh
slides/: build_beamer.sh  demo_workflow_beamer.aux  demo_workflow_beamer.fdb_latexmk  demo_workflow_beamer.fls  demo_workflow_beamer.nav  demo_workflow_beamer.out  demo_workflow_beamer.tex  demo_workflow_beamer.toc  demo_workflow_beamer.xdv
src/: history_dashboard_viz.py  msfenicsx_viz.py  runtime_config.py
(+1815 files in other folders)
