[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfenicsx"
version = "0.1.0"
description = "Clean rebuild skeleton for the msfenicsx Phase 1 platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
msfenicsx = "core.cli.main:main"

[tool.setuptools.packages.find]
include = ["core*", "evaluation*", "optimizers*", "llm*", "visualization*"]

[tool.pytest.ini_options]
pythonpath = ["."]
