[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfenicsx"
version = "0.9.0"
description = "Satellite thermal control layout optimization with LLM-guided semantic operator selection."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=2.0",
    "shapely>=2.0",
    "pymoo>=0.6,<0.7",
    "matplotlib>=3.8",
    "scipy>=1.12",
]

[project.optional-dependencies]
llm = [
    "openai>=1.70",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
msfenicsx = "core.cli.main:main"
msfenicsx-evaluate = "evaluation.cli:main"
msfenicsx-optimize = "optimizers.cli:main"

[tool.setuptools.packages.find]
include = ["core*", "evaluation*", "optimizers*", "llm*", "visualization*"]

[tool.pytest.ini_options]
pythonpath = ["."]
